Added intro NA value checking

--- a/group_59_report.ipynb
+++ b/group_59_report.ipynb
@@ -201,6 +201,111 @@
       "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
       "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
      ]
+    }
+   ],
+   "source": [
+    "names <- c(\"age\", \"sex\", \"cp\", \"trestbps\", \"chol\", \"fbs\", \"restecg\", \"thalach\", \"exang\", \"oldpeak\", \"slope\", \"ca\", \"thal\", \"num\")\n",
+    "patient_data_refactored <- read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.cleveland.data\", col_names = names) |>\n",
+    "    mutate(num = as_factor(num)) |>\n",
+    "    mutate(cp = as_factor(cp)) |>\n",
+    "    mutate(sex = as_factor(sex)) |>\n",
+    "    mutate(exang = as_factor(exang)) |>\n",
+    "    mutate(slope = as_factor(slope)) |>\n",
+    "    mutate(restecg = as_factor(restecg)) |>\n",
+    "    mutate(ca = as_factor(ca)) |>\n",
+    "    mutate(thal = as_factor(thal)) |>\n",
+    "    mutate(fbs = as.logical(fbs))\n",
+    "patient_data <- patient_data_refactored |>\n",
+    "    select(-sex, -cp, -restecg, -fbs, -exang, -slope, -ca, -thal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef21b0a0-c6ce-4317-859b-b474beaa31a2",
+   "metadata": {},
+   "source": [
+    "* Now, we must check for any `NA` values in the dataset and remove instances that contain it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "57fa13b1-166f-45b4-a3b0-387fb55dd111",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 1.1\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 0 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>age</th><th scope=col>trestbps</th><th scope=col>chol</th><th scope=col>thalach</th><th scope=col>oldpeak</th><th scope=col>num</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 0 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " age & trestbps & chol & thalach & oldpeak & num\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <fct>\\\\\n",
+       "\\hline\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 0 × 6\n",
+       "\n",
+       "| age &lt;dbl&gt; | trestbps &lt;dbl&gt; | chol &lt;dbl&gt; | thalach &lt;dbl&gt; | oldpeak &lt;dbl&gt; | num &lt;fct&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     age trestbps chol thalach oldpeak num"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "patient_na_values <- patient_data |>\n",
+    "    filter(age == NA | trestbps == NA | chol == NA | thalach == NA | oldpeak == NA | num == NA)\n",
+    "print(\"Table 1.1\")\n",
+    "patient_na_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "235eeeb0-f5f4-4b62-9520-0631e026eba7",
+   "metadata": {},
+   "source": [
+    "* In Table 1.1, we can see that there are 0 instances of any `NA` values.\n",
+    "    * When creating this dataset, the researchers most likely accounted for and removed any `NA` from their observations.\n",
+    "* Table 1.2 below shows the total dataset that we wil be using."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4f4543e2-214b-4883-9ac0-77f6f39a1a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 1.2\"\n"
+     ]
     },
     {
      "data": {
@@ -272,22 +377,7 @@
     }
    ],
    "source": [
-    "names <- c(\"age\", \"sex\", \"cp\", \"trestbps\", \"chol\", \"fbs\", \"restecg\", \"thalach\", \"exang\", \"oldpeak\", \"slope\", \"ca\", \"thal\", \"num\")\n",
-    "patient_data_refactored <- read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.cleveland.data\", col_names = names) |>\n",
-    "    mutate(num = as_factor(num)) |>\n",
-    "    mutate(cp = as_factor(cp)) |>\n",
-    "    mutate(sex = as_factor(sex)) |>\n",
-    "    mutate(exang = as_factor(exang)) |>\n",
-    "    mutate(slope = as_factor(slope)) |>\n",
-    "    mutate(restecg = as_factor(restecg)) |>\n",
-    "    mutate(ca = as_factor(ca)) |>\n",
-    "    mutate(thal = as_factor(thal)) |>\n",
-    "    mutate(fbs = as.logical(fbs))\n",
-    "patient_data_specified <- patient_data_refactored |>\n",
-    "    select(-sex, -cp, -restecg, -fbs, -exang, -slope, -ca, -thal)\n",
-    "# output the number of NA values\n",
-    "patient_data <- patient_data_specified |>\n",
-    "    na.omit()\n",
+    "print(\"Table 1.2\")\n",
     "patient_data"
    ]
   },
@@ -310,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "dd6aa7d3-daf8-4773-9ed0-b00b9482e18f",
    "metadata": {},
    "outputs": [],
@@ -332,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a2827489-82aa-412f-b5c3-4495c0a59eca",
    "metadata": {},
    "outputs": [
@@ -422,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3503fafb-41c3-4d47-92a3-1df734945482",
    "metadata": {},
    "outputs": [
@@ -523,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3e4346c9-18bb-4fe5-abe8-ec644ffc63c0",
    "metadata": {},
    "outputs": [
@@ -625,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f9c8ac3a-d30c-418c-8003-8745658d7351",
    "metadata": {},
    "outputs": [],
@@ -641,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3eaae5fe-6b07-4deb-87fc-5bca1760f57d",
    "metadata": {},
    "outputs": [
@@ -676,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7beac414-a327-4157-bcf3-2abc3825cbc2",
    "metadata": {},
    "outputs": [
@@ -711,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "2801e21d-f0b7-4892-ac1c-25162a4aaa60",
    "metadata": {},
    "outputs": [
@@ -746,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6b55b70a-c28a-4ef5-b625-01ebf53e4f0e",
    "metadata": {},
    "outputs": [
@@ -846,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "65a63d1b-05a3-4d19-8b8c-c4149d08f5ae",
    "metadata": {},
    "outputs": [
@@ -874,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "749ee57d-5611-4af8-a264-a8e844f74002",
    "metadata": {},
    "outputs": [
@@ -943,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ac3445c1-8172-45fb-a835-5a11905f3785",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "3f8d7a89-f892-4028-be8c-08f9f2095ce3",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "7fe48aa8-bf46-4ae0-b3bf-4e013435d65e",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "0a9bf4ed-af28-449d-a546-401b0840693b",
    "metadata": {},
    "outputs": [
