Decrease word count

--- a/group_59_report.ipynb
+++ b/group_59_report.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "695515ff-d921-4918-b1e1-99934b92b385",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Predicting a Patient's Heart Condition"
    ]
