submitting this one!

--- a/group_59_report.ipynb
+++ b/group_59_report.ipynb
@@ -75,7 +75,8 @@
    "id": "ad652bdb-69fd-4a80-8ec9-c725b421223d",
    "metadata": {},
    "source": [
-    "We can see in Table 0.1 that many of the dataset's attributes are categorical variables, so we will need to remove them since our analysis will be composed of a KNN classification model, which for the scope of this class uses only continuous variables as predictors. This includes the age of the patient, blood pressure, cholesterol, maximum heart rate achieved, and depression induced by exercise related to rest to predict the final diagnosis of heart disease."
+    "We can see in Table 0.1 that many of the dataset's at\n",
+    "tributes are categorical variables, so we will need to remove them since our analysis will be composed of a KNN classification model, which for the scope of DSCI 100 only uses continuous variables as predictors. This includes the age of the patient, blood pressure, cholesterol, maximum heart rate achieved, and depression induced by exercise related to rest to predict the final diagnosis of heart disease."
    ]
   },
   {
@@ -153,7 +154,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
       "\n"
      ]
     }
@@ -177,7 +178,7 @@
     "* The Fasting Blood Sugar levels will be converted to a logical type, as the dataset represents them as either `true` or `false`.\n",
     "* Since many of the possible predictor variables are not continuous (are categoric), we will have to omit these variables as possible predictors, as using categoric predictor variables in KNN Classification is something outside of the scope of DSCI 100.\n",
     "    * We will use `select()` to remove these columns.\n",
-    "* Finally, we will remove any `NA` values from our dataset by using `na.omit()`"
+    "* Finally, we will remove any `NA` values from our dataset."
    ]
   },
   {
@@ -1204,8 +1205,8 @@
    "id": "1bc56df4-36d1-4a25-8fc9-87beaf10c610",
    "metadata": {},
    "source": [
-    "* From Figure 6.2, we can see that our model had a prediction accuracy of 54% when classifying the observations of the testing set.\n",
-    "* However, we can see that almost all of the correct predictions were made on patients that did not have heart disease.\n",
+    "* From Figure 6.1, we can see that our model had a prediction accuracy of 54% when classifying the observations of the testing set.\n",
+    "* However, we can see in Figure 6.2 that almost all of the correct predictions were made on patients that did not have heart disease.\n",
     "    * This may be because our dataset is composed mostly of patients who do not have heart disease, so our model may be overfitted with a large number of `num = 0` instances."
    ]
   },
@@ -1355,7 +1356,7 @@
    "id": "1266ef4c-20d7-40ce-8d0b-5d030445c2fc",
    "metadata": {},
    "source": [
-    "* Finally, in Figure 6.3 above, we can see that there is little to no trend between different combinations of variables.\n",
+    "* However, in Figure 6.3 above, we can see that there is little to no trend between different combinations of variables.\n",
     "    * The points spread to different places without any noticeable bias or trends.\n",
     "* This means that the predictor variables were chosen well, as they are independent of each other and minimize the chances of multicollinearity."
    ]
