--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -5,7 +5,7 @@
    "id": "95d13850-6730-473e-b199-ac6b81a5e134",
    "metadata": {},
    "source": [
-    "# Project Proposal: Group 59\n",
+    "# Project Proposal\n",
     "### Jin Kim, Emily Ishii, Natasha Larin, Syed Haque"
    ]
   },
